now saving tasks

--- a/sample_app_1/data/tasks.json
+++ b/sample_app_1/data/tasks.json
@@ -1,1 +1,1 @@
-[]
+{"4tn1w05427beza9t":{"description":"This is my second test","assignedTo":"jm","id":"4tn1w05427beza9t"},"xj0wvw7wtwbw5x4v":{"description":"This is my third test.","assignedTo":"jm","id":"xj0wvw7wtwbw5x4v"},"obsj4qdgym25kdqu":{"description":"Let's try another test, just to make sure it's working after a restart.","id":"obsj4qdgym25kdqu"},"mhtmzddd9ash2ur3":{"description":"OK. One more.","id":"mhtmzddd9ash2ur3"}}
